--- a/frontend/style.css
+++ b/frontend/style.css
@@ -61,7 +61,7 @@ body {
     height: 620px;
     display: flex;
     font-size: 16px;
-    margin: 15px 20px;
+    margin: 5px 20px;
     border-radius: 20px;
     button:hover
      {
@@ -70,14 +70,13 @@ body {
 } 
 .button-navbar {
     font-family: 'Poppins ExtraBold', sans-serif;
-    border-radius: 10px;
     border-style: none;
+    border-bottom: rgb(201, 247, 247) solid 1px;
     width: 90%;
-    background-color: rgb(201, 247, 247);
+    background-color: rgba(0, 0, 0, 0.055);
     height: 50px;
-    color: rgb(51, 50, 50);
-    margin: 2px;
-    font-size: 15px;
+    color: rgb(255, 255, 255);
+    font-size: 17px;
 }
 a {
     text-decoration: none;
@@ -95,5 +94,4 @@ span {
     font-size: 70px;
     text-align: left;
     justify-content: center;
-
 }
